[project]
name = "shap-and-emb-explain-your-gradient-boosting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.2.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "shap>=0.46.0",
    "xgboost>=2.1.1",
]
