[project]
name = "shap-and-emb-explain-your-gradient-boosting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "interpret>=0.6.4",
    "jupyterlab>=4.2.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "shap>=0.46.0",
    "xgboost>=2.1.1",
]
